# demo-project

./: .gitignore  DEMO.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  runner.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/notes/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/notes/management/commands/: seed_categories.py
backend/notes/migrations/: 0001_initial.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/dashboard/: dashboard-content.tsx  loading.tsx  page.tsx
frontend/src/components/: NoteCard.tsx  NoteModal.tsx  Sidebar.tsx
frontend/src/components/islands/: NoteModalIsland.tsx  NotesGridIsland.tsx  SidebarIsland.tsx
frontend/src/lib/: api.ts  hooks.ts  utils.ts
